--- a/darwin_amd64/Makefile
+++ b/darwin_amd64/Makefile
@@ -1,6 +1,8 @@
 NASM=/usr/local/Cellar/nasm/2.13.01/bin/nasm
 LLD=/usr/local/Cellar/llvm/4.0.1/bin/ld.lld
 
+all: nasm.ld
+
 clean:
 	@echo "= Clean ================================"
 	rm -f object.o binary
