Add binary dump

--- a/darwin_386/Makefile
+++ b/darwin_386/Makefile
@@ -6,6 +6,9 @@ clean:
 	@echo "= Clean ================================"
 	rm -f object.o binary
 
+dump:
+	$(NDISASM) -b 64
+
 build.nasm:
 	@echo "= Build: nasm =========================="
 	$(NASM) -f macho -o object.o nasm.asm
@@ -21,5 +24,7 @@ run:
 	file binary
 	@echo "= Show symbol =========================="
 	otool -L binary
+	@echo "= Disasembly ==========================="
+	otool -tv binary
 	@echo "= Execute binary ======================="
 	./binary; echo Return code $$?
