Implement the llvm bytecode for darwin_amd64

--- a/darwin_amd64/Makefile
+++ b/darwin_amd64/Makefile
@@ -1,6 +1,7 @@
 NASM=/usr/local/Cellar/nasm/2.13.01/bin/nasm
+LLI=/usr/local/Cellar/llvm/4.0.1/bin/lli
 
-all: nasm.ld
+all: nasm.ld lli
 
 clean:
 	@echo "= Clean ================================"
@@ -25,3 +26,7 @@ run:
 	otool -tv binary
 	@echo "= Execute binary ======================="
 	./binary; echo Return code $$?
+
+lli:
+	@echo "= Execute llvm-lli ====================="
+	$(LLI) llvm.ll; echo Return code $$?
