Implement llc/ld toolchain on darwin_amd64

--- a/darwin_amd64/Makefile
+++ b/darwin_amd64/Makefile
@@ -1,7 +1,11 @@
 NASM=/usr/local/opt/nasm/bin/nasm
+LLC=/usr/local/opt/llvm/bin/llc
 LLI=/usr/local/opt/llvm/bin/lli
 
-all: nasm.ld lli
+all:
+	$(MAKE) nasm.ld
+	$(MAKE) llc.ld
+	$(MAKE) lli
 
 clean:
 	@echo "= Clean ================================"
@@ -11,11 +15,18 @@ build.nasm:
 	@echo "= Build: nasm =========================="
 	$(NASM) -f macho64 -o object.o nasm.asm
 
+build.llc:
+	@echo "= Build: llc ==========================="
+	$(LLC) -march=x86-64 -filetype=obj -o object.o llvm.ll
+
 link.ld:
 	@echo "= Link: ld ============================="
-	ld -o binary object.o
+	ld $(LDFLAGS) -o binary object.o
 
 nasm.ld: | clean build.nasm link.ld run
+
+llc.ld: LDFLAGS = -e _start -lSystem -macosx_version_min 10.12
+llc.ld: | clean build.llc link.ld run
 
 run:
 	@echo "= Determine file type =================="
