Implement linux_amd64 with llvm-llc/ld build chain

--- a/linux_amd64/Makefile
+++ b/linux_amd64/Makefile
@@ -1,4 +1,6 @@
-all: nasm.ld
+all:
+	echo $(MAKE) nasm.ld
+	$(MAKE) llc.ld.ld
 
 clean:
 	@echo "= Clean ================================"
@@ -8,11 +10,17 @@ build.nasm:
 	@echo "= Build: nasm =========================="
 	nasm -f elf64 -o object.o nasm.asm
 
+build.llc:
+	@echo "= Build: llc ==========================="
+	llc -march=x86-64 -filetype=obj -o object.o llvm.ll
+	file object.o
+
 link.ld:
 	@echo "= Link: ld ============================="
 	ld -o binary object.o
 
 nasm.ld: | clean build.nasm link.ld run
+llc.ld: | clean build.llc link.ld run
 
 run:
 	@echo "= Determine file type =================="
