--- a/linux_amd64/Makefile
+++ b/linux_amd64/Makefile
@@ -1,6 +1,6 @@
 all:
-	echo $(MAKE) nasm.ld
-	$(MAKE) llc.ld.ld
+	$(MAKE) nasm.ld
+	$(MAKE) llc.ld
 
 clean:
 	@echo "= Clean ================================"
