--- a/linux_amd64/Makefile
+++ b/linux_amd64/Makefile
@@ -1,6 +1,6 @@
 all:
 	$(MAKE) nasm.ld
-	$(MAKE) llc.ld
+	$(MAKE) llvm.ld
 
 clean:
 	@echo "= Clean ================================"
@@ -10,8 +10,8 @@ build.nasm:
 	@echo "= Build: nasm =========================="
 	nasm -f elf64 -o object.o nasm.asm
 
-build.llc:
-	@echo "= Build: llc ==========================="
+build.llvm:
+	@echo "= Build: llvm =========================="
 	llvm-link ../common/llvm.ll ../common/llvm.amd64.ll llvm.ll -o llvm.bc
 	llc -march=x86-64 -filetype=obj -o object.o llvm.bc
 	file object.o
@@ -21,7 +21,7 @@ link.ld:
 	ld -o binary object.o
 
 nasm.ld: | clean build.nasm link.ld run
-llc.ld: | clean build.llc link.ld run
+llvm.ld: | clean build.llvm link.ld run
 
 run:
 	@echo "= Determine file type =================="
