Handle argc/v and envp on linux_amd64

--- a/linux_amd64/Makefile
+++ b/linux_amd64/Makefile
@@ -29,4 +29,4 @@ run:
 	@echo "= Disasembly ==========================="
 	objdump -d binary
 	@echo "= Execute binary ======================="
-	./binary; echo Return code $$?
+	./binary "First arg" "Second arg"; echo Return code $$?
